hard-gists/8481824/run.log
=== Docker Run Log for 8481824 ===
Started at: Mi 29. Okt 17:49:39 CET 2025

[2025-10-29 17:49:39] START: Running container for 8481824
[2025-10-29 17:49:39] SUCCESS: Container fe9cb5341838b5bf9ded0d9c1358168c327ced1a14d94f540a300f882658a978 started for 8481824
=== Container logs for 8481824 ===
  File "/snippet.py", line 29
    print relvars.transpose()[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8481824 ===
[2025-10-29 17:49:41] INFO: Container fe9cb5341838b5bf9ded0d9c1358168c327ced1a14d94f540a300f882658a978 has stopped
